application/brennoflavio/minatto/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: minatto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: gcr-secret
      containers:
        - name: backend
          image: ghcr.io/brennoflavio/minatto-backend:master-dea788a-1767325908 # {"$imagepolicy": "minatto:backend"}
          volumeMounts:
            - name: pocketbase
              mountPath: /pb/pb_data
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 8080
      volumes:
        - name: pocketbase
          persistentVolumeClaim:
            claimName: pocketbase
