application/brennoflavio/minatto/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: minatto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gcr-secret
      containers:
        - name: frontend
          image: ghcr.io/brennoflavio/minatto-frontend:master-dc64114-1767327851 # {"$imagepolicy": "minatto:frontend"}
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 80
