application/brennoflavio/minatto/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: minatto
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
