application/brennoflavio/minatto/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: minatto
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
