application/brennoflavio/minatto/backend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: minatto
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
spec:
  rules:
  - host: api.minatto.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
  tls:
  - hosts:
    - api.minatto.brennoflavio.com.br
    secretName: backend-tls
